--- a/elena-email-theme/package.json
+++ b/elena-email-theme/package.json
@@ -15,7 +15,9 @@
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^3.1.0",
     "husky": "^0.15.0-rc.8",
-    "lint-staged": "^6.1.1"
+    "js-beautify": "^1.7.5",
+    "lint-staged": "^6.1.1",
+    "prettier": "^1.10.2"
   },
   "dependencies": {
     "entypo": "^2.1.0",
