--- a/elena-email-theme/package.json
+++ b/elena-email-theme/package.json
@@ -16,7 +16,7 @@
     "gulp-sass": "^3.1.0",
     "husky": "^0.15.0-rc.8",
     "js-beautify": "^1.7.5",
-    "lint-staged": "^6.1.1",
+    "lint-staged": "^7.0.0",
     "prettier": "^1.10.2"
   },
   "dependencies": {
@@ -24,8 +24,12 @@
     "gulp-rename": "^1.2.2"
   },
   "lint-staged": {
-    "*.{js,json,css,md}": [
+    "*.{js,css,scss}": [
       "prettier --write",
+      "git add"
+    ],
+    "*.html": [
+      "js-beautify --indent-size 2 --replase",
       "git add"
     ]
   },
