--- a/elena-email-theme/package.json
+++ b/elena-email-theme/package.json
@@ -4,10 +4,29 @@
   "description": "Markup Elena-theme",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "lint-staged"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gift-a/task.git"
   },
   "author": "Kseniia",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gift-a/task/issues"
+  },
+  "homepage": "https://github.com/gift-a/task#readme",
+  "lint-staged": {
+    "*.{js,css,scss}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.html": [
+      "js-beautify --indent-size 2 --replase",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
     "browser-sync": "^2.23.6",
@@ -22,23 +41,5 @@
   "dependencies": {
     "entypo": "^2.1.0",
     "gulp-rename": "^1.2.2"
-  },
-  "lint-staged": {
-    "*.{js,css,scss}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.html": [
-      "js-beautify --indent-size 2 --replase",
-      "git add"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gift-a/task-0.git"
-  },
-  "bugs": {
-    "url": "https://github.com/gift-a/task-0/issues"
-  },
-  "homepage": "https://github.com/gift-a/task-0#readme"
+  }
 }
